tests/semantic/invalid/expected/return_in_void.txt
semantic error: неверный возвращаемый тип - функция void_function имеет тип void, но возвращает значение
  --> tests/semantic/invalid/return_in_void.src:2:5
2      return 42;
       ^
   = ожидалось: void
   = получено: int
   = подсказка: измените тип возвращаемого значения или тип функции

